Create clientside BufferReader and BufferWriter